[package]
name = "epsg"
version = "0.5.0"
authors = ["Alex Collins"]
edition = "2018"
homepage = "https://github.com/atcol/epsg"
keywords = ["epsg", "ogc", "geo", "crs", "coordinates"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/atcol/epsg"
description = "EPSG Coordinate Reference System tools & data"

[dependencies]
phf = { version = "0.10.0", features = ["macros"] }
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"

[build-dependencies]
reqwest = { version = "0.11.4", features = [ "blocking" ] }
postgres = { version = "0.19.1", features = ["with-time-0_2"] }
handlebars = "4.1.2"
serde = { version = "1.0.130", features = ["derive"] }
# Stuck on version 2.0 'til postgres moves for time feature
time = "0.2"

[[bench]]
name = "lookup"
harness = false
