[package]
name = "epsg"
version = "11.1.2"
authors = ["Alex Collins"]
edition = "2021"
homepage = "https://github.com/atcol/epsg"
keywords = ["epsg", "ogc", "geo", "crs", "coordinates"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/atcol/epsg"
description = "EPSG Coordinate Reference System tools & data"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
reqwest = { version = "0.11.22", features = [ "blocking" ] }
postgres = { version = "0.19.7", features = ["with-time-0_3"] }
handlebars = "4.5.0"
serde = { version = "1.0.193", features = ["derive"] }
time = "0.3"

[[bench]]
name = "lookup"
harness = false
